--- a/wholesaler.html
+++ b/wholesaler.html
@@ -216,6 +216,7 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
       <button class="loc-btn" onclick="getCurrentLocation()">
         📡 Use Current Location
       </button>
+     <small id="locationTimer" style="color:#475569;font-size:12px"></small>
     </div>
 
     <button class="primary" onclick="saveWholesalerProfileToServer()">Save</button>
@@ -541,37 +542,47 @@ async function saveWholesalerProfileToServer() {
 
  function getCurrentLocation(){
 
-  if (!navigator.geolocation) {
-    alert("❌ Location not supported in this device");
+  const key = "wholesalerProfile_" + WID;
+  const profile = JSON.parse(localStorage.getItem(key) || "{}");
+
+  // 🔒 LOCK CHECK
+  if (profile.location?.locked) {
+    alert("🔒 Location locked. Contact admin to change.");
     return;
   }
 
-  // optional: loading feel
+  if (!navigator.geolocation) {
+    alert("❌ Location not supported");
+    return;
+  }
+
   const locInput = document.getElementById("locationText");
   if (locInput) locInput.value = "📍 Fetching location...";
 
   navigator.geolocation.getCurrentPosition(
     (pos) => {
-      const lat = pos.coords.latitude;
-      const lng = pos.coords.longitude;
+      const location = {
+        lat: pos.coords.latitude,
+        lng: pos.coords.longitude,
+        setAt: profile.location?.setAt || Date.now(),
+        locked: false
+      };
 
-      if (locInput) {
-        locInput.value = `${lat.toFixed(6)}, ${lng.toFixed(6)}`;
-      }
+      locInput.value =
+        location.lat.toFixed(6) + ", " + location.lng.toFixed(6);
 
-      console.log("📍 Location set:", lat, lng);
+      profile.location = location;
+      localStorage.setItem(key, JSON.stringify(profile));
+
+      updateLocationTimer(location.setAt);
+
+      alert("✅ Location set successfully");
     },
-    (err) => {
-      console.error("Location error:", err);
-      alert("❌ Location permission denied or unavailable");
-
-      if (locInput) locInput.value = "";
+    () => {
+      alert("❌ Location permission denied");
+      locInput.value = "";
     },
-    {
-      enableHighAccuracy: true,
-      timeout: 15000,
-      maximumAge: 0
-    }
+    { enableHighAccuracy:true, timeout:15000 }
   );
 }
 
