--- a/retailer.html
+++ b/retailer.html
@@ -653,7 +653,7 @@ let currentWholesalerId = null;
   // DOM elements
 const dImages = document.getElementById("dImages");
 const dDots   = document.getElementById("dDots");
-
+const LOCATION_EDIT_LIMIT = 10 * 60 * 60 * 1000; // 10 hours
 const products = document.getElementById("products");
 const detailModal = document.getElementById("detailModal");
 const dName = document.getElementById("dName");
