--- a/retailer.html
+++ b/retailer.html
@@ -801,70 +801,57 @@ function openCategory(categoryId, wid) {
   window.location.href =
     `categoryProducts.html?wid=${wid}&category=${categoryId}`;
 }
-function checkLocationLock() {
-  const setAt = localStorage.getItem("retailer_location_set_at");
-  if (!setAt) return;
 
-  const TEN_HOURS = 10 * 60 * 60 * 1000;
-  const now = Date.now();
-
-  if (now - Number(setAt) > TEN_HOURS) {
-    localStorage.setItem("retailer_location_locked", "true");
-
-    const btn = document.querySelector(
-      "#profileModal .location-group button"
-    );
-
-    if (btn) {
-      btn.disabled = true;
-      btn.innerText = "🔒 Location Locked";
-      btn.style.background = "#9ca3af";
-      btn.style.cursor = "not-allowed";
-    }
-  }
-}
 
   let locationTimerInterval = null;
 
-function updateLocationTimer(setAt, locked) {
+function updateLocationTimer(firstSetAt, locked) {
 
   const timerEl = document.getElementById("locationTimer");
+  const btn = document.querySelector(
+    "#profileModal .location-group button"
+  );
+
   if (!timerEl) return;
 
   const LIMIT = 10 * 60 * 60 * 1000; // 10 hours
-  setAt = Number(setAt);
+  firstSetAt = Number(firstSetAt);
 
   if (locationTimerInterval) {
     clearInterval(locationTimerInterval);
   }
 
   function tick() {
-    const diff = (setAt + LIMIT) - Date.now();
-
-    if (diff <= 0 || locked) {
-      timerEl.innerText =
-        "🔒 Location permanently lock ho chuki hai. Ab correction possible nahi hai.";
-
-      const btn = document.querySelector(
-        "#profileModal .location-group button"
-      );
+    if (locked) {
+      timerEl.innerText = "🔒 Location permanently locked";
       if (btn) {
         btn.disabled = true;
         btn.innerText = "🔒 Location Locked";
         btn.style.background = "#9ca3af";
       }
-
       clearInterval(locationTimerInterval);
       return;
     }
 
-    const hrs  = Math.floor(diff / 3600000);
-    const mins = Math.floor((diff % 3600000) / 60000);
-    const secs = Math.floor((diff % 60000) / 1000);
+    const diff = (firstSetAt + LIMIT) - Date.now();
+
+    if (diff <= 0) {
+      timerEl.innerText = "🔒 Location permanently locked";
+      if (btn) {
+        btn.disabled = true;
+        btn.innerText = "🔒 Location Locked";
+        btn.style.background = "#9ca3af";
+      }
+      clearInterval(locationTimerInterval);
+      return;
+    }
+
+    const h = Math.floor(diff / 3600000);
+    const m = Math.floor((diff % 3600000) / 60000);
+    const s = Math.floor((diff % 60000) / 1000);
 
     timerEl.innerText =
-`⏳ Sirf ${hrs}h ${mins}m ${secs}s baaki hain.
-Iske baad location permanently lock ho jayegi aur correction possible nahi hoga.`;
+      `⏳ ${h}h ${m}m ${s}s baaki hain (10h limit)`;
   }
 
   tick();
